--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,16 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4" style="text-align: center">
+  <div class="col-md-4 col-md-offset-4" style="text-align: center;">
     <h1>Motoristas</h1>
-    <%= link_to "Vila Guilherme",                   vila_guilherme_path, class: "btn btn-block btn-default"  %>
-    <%= link_to "Vila Mariana",                     vila_mariana_path,   class: "btn btn-block btn-default"  %>
-    <%= link_to "Licença Médica",                   licenca_medica_path, class: "btn btn-block btn-default"  %>
-    <%= link_to "Processo Administrativo de Falta", falta_path,          class: "btn btn-block btn-default"  %>
-    <%= link_to "Recorps",                          recorps_path,        class: "btn btn-block btn-default"  %>
-    <%= link_to "Outras Áreas",                     outras_areas_path,   class: "btn btn-block btn-default"  %>
-    <%= link_to "Readaptados",                      readaptados_path,    class: "btn btn-block btn-default"  %>
-    <%= link_to "Aposentados",                      aposentados_path,    class: "btn btn-block btn-default"  %>
-    <%= link_to "Geral",                            geral_path,          class: "btn btn-block btn-default"  %>
+    <div class="col-md-8 col-md-offset-2" style="margin-top: 10px">
+      <%= link_to "Vila Guilherme",                   vila_guilherme_path, class: "btn btn-block btn-default"  %>
+      <%= link_to "Vila Mariana",                     vila_mariana_path,   class: "btn btn-block btn-default"  %>
+      <%= link_to "Licença Médica",                   licenca_medica_path, class: "btn btn-block btn-default"  %>
+      <%= link_to "Processo Administrativo de Falta", falta_path,          class: "btn btn-block btn-default"  %>
+      <%= link_to "Recorps",                          recorps_path,        class: "btn btn-block btn-default"  %>
+      <%= link_to "Outras Áreas",                     outras_areas_path,   class: "btn btn-block btn-default"  %>
+      <%= link_to "Readaptados",                      readaptados_path,    class: "btn btn-block btn-default"  %>
+      <%= link_to "Aposentados",                      aposentados_path,    class: "btn btn-block btn-default"  %>
+      <%= link_to "Geral",                            geral_path,          class: "btn btn-block btn-default"  %>
+    </div>
   </div>
 </div>
