Listas, new, edit e show views

--- a/app/views/listas/aposentados.html.erb
+++ b/app/views/listas/aposentados.html.erb
@@ -1,2 +1,2 @@
-<h1>Listas#aposentados</h1>
-<p>Find me in app/views/listas/aposentados.html.erb</p>
+<h1>Motoristas - Aposentados</h1>
+<%= render 'layouts/lista', object: @motoristas %>
