--- a/app/views/listas/geral.html.erb
+++ b/app/views/listas/geral.html.erb
@@ -1,2 +1,2 @@
-<h1>Listas#geral</h1>
-<p>Find me in app/views/listas/geral.html.erb</p>
+<h1>Motoristas - Geral</h1>
+<%= render 'layouts/lista', object: @motoristas %>
