--- a/app/views/listas/licenca_medica.html.erb
+++ b/app/views/listas/licenca_medica.html.erb
@@ -1,2 +1,2 @@
-<h1>Listas#licenca_medica</h1>
-<p>Find me in app/views/listas/licenca_medica.html.erb</p>
+<h1>Motoristas - Licença Médica</h1>
+<%= render 'layouts/lista', object: @motoristas %>
