--- a/app/views/listas/readaptados.html.erb
+++ b/app/views/listas/readaptados.html.erb
@@ -1,2 +1,2 @@
-<h1>Listas#readaptados</h1>
-<p>Find me in app/views/listas/readaptados.html.erb</p>
+<h1>Motoristas - Readaptados</h1>
+<%= render 'layouts/lista', object: @motoristas %>
