--- a/app/views/listas/vila_mariana.html.erb
+++ b/app/views/listas/vila_mariana.html.erb
@@ -1,2 +1,2 @@
-<h1>Listas#vila_mariana</h1>
-<p>Find me in app/views/listas/vila_mariana.html.erb</p>
+<h1>Motoristas - Vila Mariana</h1>
+<%= render 'layouts/lista', object: @motoristas %>
