--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+td, th {
+   text-align: center;
+}
+
+input, textarea, select {
+  margin-bottom: 10px;
+}
