--- a/app/views/listas/falta.html.erb
+++ b/app/views/listas/falta.html.erb
@@ -1,2 +1,2 @@
-<h1>Listas#falta</h1>
-<p>Find me in app/views/listas/falta.html.erb</p>
+<h1>Motoristas - Processo Administrativo de Falta</h1>
+<%= render 'layouts/lista', object: @motoristas %>
