--- a/app/views/listas/outras_areas.html.erb
+++ b/app/views/listas/outras_areas.html.erb
@@ -1,2 +1,2 @@
-<h1>Listas#outras_areas</h1>
-<p>Find me in app/views/listas/outras_areas.html.erb</p>
+<h1>Motoristas - Outras Áreas</h1
+<%= render 'layouts/lista', object: @motoristas %>
