--- a/app/views/listas/recorps.html.erb
+++ b/app/views/listas/recorps.html.erb
@@ -1,2 +1,2 @@
-<h1>Listas#recorps</h1>
-<p>Find me in app/views/listas/recorps.html.erb</p>
+<h1>Motoristas - Recorps</h1>
+<%= render 'layouts/lista', object: @motoristas %>
