--- a/app/views/listas/vila_guilherme.html.erb
+++ b/app/views/listas/vila_guilherme.html.erb
@@ -1,2 +1,2 @@
-<h1>Listas#vila_guilherme</h1>
-<p>Find me in app/views/listas/vila_guilherme.html.erb</p>
+<h1>Motoristas - Vila Guilherme</h1>
+<%= render 'layouts/lista', object: @motoristas %>
