Começo da base de dados

--- a/app/views/layouts/_lista.html.erb
+++ b/app/views/layouts/_lista.html.erb
@@ -18,6 +18,7 @@
           </tr>
         </thead>
         <tbody>
+            <!--@motoristas.each do |m|-->
           <tr>
             <th>1</th>
             <td>Mark</td>
@@ -29,6 +30,7 @@
             <td>bla</td>
             <td>bla</td>
           </tr>
+          <!--end-->
           <tr>
             <th>2</th>
             <td>Jacob</td>
