--- a/app/views/layouts/_lista.html.erb
+++ b/app/views/layouts/_lista.html.erb
@@ -1,59 +1,54 @@
 <div class="tabela">
-    <!--<div class="panel panel-default">-->
-    <!--  <div class="panel-heading">-->
-    <!--    Motoristas - Geral-->
-    <!--  </div>-->
-      <table class="table table-condensed table-striped">
-        <thead>
+  <table class="table table-condensed table-striped">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Nome</th>
+        <th>RF</th>
+        <th>Cargo</th>
+        <th>Seção Original</th>
+        <th>Seção Atual</th>
+        <th>Pontuação</th>
+        <th>Local</th>
+        <th>Status</th>
+        <th>Editar</th>
+        <th>Deletar</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% contador = 1 %>
+      <% if object.class == Motorista %>
+        <tr>
+          <th><%= contador %></th>
+          <td><%= object.nome %></td>
+          <td><%= object.rf %></td>
+          <td><%= object.cargo %></td>
+          <td><%= object.secao_original %></td>
+          <td><%= object.secao_atual %></td>
+          <td><%= object.pontuacao %></td>
+          <td><%= object.local %></td>
+          <td><%= object.status %></td>
+          <td><%= link_to "Editar", edit_motorista_path(object) %></td>
+          <td><%= link_to "Deletar", object, method: :delete, data: { confirm: "Tem certeza que deseja deletar este motorista?" } %></td>
+        </tr>
+      <% else %>
+        <% object.each do |m| %>
           <tr>
-            <th>#</th>
-            <th>Nome</th>
-            <th>RF</th>
-            <th>Cargo</th>
-            <th>Seção Original</th>
-            <th>Seção Atual</th>
-            <th>Pontuação</th>
-            <th>Local</th>
-            <th>Status</th>
+            <th><%= contador %></th>
+            <td><%= m.nome %></td>
+            <td><%= m.rf %></td>
+            <td><%= m.cargo %></td>
+            <td><%= m.secao_original %></td>
+            <td><%= m.secao_atual %></td>
+            <td><%= m.pontuacao %></td>
+            <td><%= m.local %></td>
+            <td><%= m.status %></td>
+            <td><%= link_to "Editar", edit_motorista_path(m) %></td>
+            <td><%= link_to "Deletar", m, method: :delete, data: { confirm: "Tem certeza que deseja deletar este motorista?" } %></td>
           </tr>
-        </thead>
-        <tbody>
-            <!--@motoristas.each do |m|-->
-          <tr>
-            <th>1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>bla</td>
-            <td>bla</td>
-            <td>bla</td>
-            <td>bla</td>
-            <td>bla</td>
-          </tr>
-          <!--end-->
-          <tr>
-            <th>2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-            <td>bla</td>
-            <td>bla</td>
-            <td>bla</td>
-            <td>bla</td>
-            <td>bla</td>
-          </tr>
-          <tr>
-            <th>3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-            <td>bla</td>
-            <td>bla</td>
-            <td>bla</td>
-            <td>bla</td>
-            <td>bla</td>
-          </tr>
-        </tbody>
-      </table>
-    <!--</div>-->
+          <% contador = contador + 1 %>
+        <% end %>
+      <% end %>
+    </tbody>
+  </table>
 </div>
