--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-4" style="text-align: center;">
     <h1>Motoristas</h1>
-    <div class="col-md-8 col-md-offset-2" style="margin-top: 10px">
+    <div class="col-md-8 col-md-offset-2" style="margin-top: 10px; margin-bottom: 20px;">
       <%= link_to "Geral",                            geral_path,          class: "btn btn-block btn-default"  %>
       <%= link_to "Vila Guilherme",                   vila_guilherme_path, class: "btn btn-block btn-default"  %>
       <%= link_to "Vila Mariana",                     vila_mariana_path,   class: "btn btn-block btn-default"  %>
@@ -12,5 +12,6 @@
       <%= link_to "Readaptados",                      readaptados_path,    class: "btn btn-block btn-default"  %>
       <%= link_to "Aposentados",                      aposentados_path,    class: "btn btn-block btn-default"  %>
     </div>
+    <%= render 'layouts/search' %>
   </div>
 </div>
