--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,6 +5,10 @@ td, th {
    text-align: center;
 }
 
-input, textarea, select {
+.formulario {
   margin-bottom: 10px;
+}
+
+body { 
+  padding-top: 70px;
 }
