--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,14 +7,9 @@
       <%= link_to "Vila Mariana",                     vila_mariana_path,   class: "btn btn-block btn-default"  %>
       <%= link_to "Licença Médica",                   licenca_medica_path, class: "btn btn-block btn-default"  %>
       <%= link_to "Processo Administrativo de Falta", falta_path,          class: "btn btn-block btn-default"  %>
-      <%= link_to "Recorps",                          recorps_path,        class: "btn btn-block btn-default"  %>
+      <%= link_to "RECORPS",                          recorps_path,        class: "btn btn-block btn-default"  %>
       <%= link_to "Outras Áreas",                     outras_areas_path,   class: "btn btn-block btn-default"  %>
       <%= link_to "Readaptados",                      readaptados_path,    class: "btn btn-block btn-default"  %>
       <%= link_to "Aposentados",                      aposentados_path,    class: "btn btn-block btn-default"  %>
-    </div>
-    <form method="link" action=<%= new_motorista_path %>>
-      <input type="submit" value="Cadastrar novo motorista">
-    </form>
-    <%= render 'layouts/search' %>
   </div>
 </div>
