--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,9 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li>
-        <%= link_to "Cadastrar novo motorista", new_motorista_path %>
+        <div style="height: 34px; margin-right: 45px">
+          <%= link_to "Cadastrar novo motorista", new_motorista_path, class: "btn btn-default", style: "vertical-align: initial" %>
+        </div>
       </li>
       <li>
         <div>
