--- a/app/views/listas/geral.html.erb
+++ b/app/views/listas/geral.html.erb
@@ -1,2 +1,18 @@
 <h1>Motoristas - Geral</h1>
-<%= render 'layouts/lista', object: @motoristas %>
+<h3>Motoristas - Vila Mariana</h3>
+<%= render 'layouts/lista', object: @vila_mariana %>
+<h3>Motoristas - Vila Guilherme</h3>
+<%= render 'layouts/lista', object: @vila_guilherme %>
+<h3>Motoristas - RECORPS</h3>
+<%= render 'layouts/lista', object: @recorps %>
+<h3>Motoristas - Outras Áreas</h3>
+<%= render 'layouts/lista', object: @outras_areas %>
+<h3>Motoristas - Readaptados</h3>
+<%= render 'layouts/lista', object: @readaptados %>
+<h3>Motoristas - Aposentados</h3>
+<%= render 'layouts/lista', object: @aposentados %>
+<h3>Motoristas - Licença Médica</h3>
+<%= render 'layouts/lista', object: @licenca_medica %>
+<h3>Motoristas - Processo Administrativo de Falta</h3>
+<%= render 'layouts/lista', object: @falta %>
+
