--- a/app/views/pages/relatorio.html.erb
+++ b/app/views/pages/relatorio.html.erb
@@ -1,6 +1,57 @@
-<div class="row">
+<h1 style="text-align: center; margin-bottom: 40px;">Relatório</h1>
+<div class="row" style="margin-top: 50px">
+  <div class="col-md-4 col-md-offset-4">
+    <div class="tabela">
+      <table class="table table-condensed">
+        <thead>
+          <tr>
+            <th class="esq">Número de Motoristas</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="esq">Vila Mariana</td>
+            <td class="dir"><%= @vila_mariana %></td>
+          </tr>
+          <tr>
+            <td class="esq">Vila Guilherme</td>
+            <td class="dir"><%= @vila_guilherme %></td>
+          </tr>
+          <tr>
+            <td class="esq">RECORPS</td>
+            <td class="dir"><%= @recorps %></td>
+          </tr>
+          <tr>
+            <td class="esq">Outras Áreas</td>
+            <td class="dir"><%= @outras_areas %></td>
+          </tr>
+          <tr>
+            <td class="esq">Readaptados</td>
+            <td class="dir"><%= @readaptados %></td>
+          </tr>
+          <tr>
+            <td class="esq">Aposentados</td>
+            <td class="dir"><%= @aposentados %></td>
+          </tr>
+          <tr>
+            <td class="esq">Licença Médica</td>
+            <td class="dir"><%= @licenca_medica %></td>
+          </tr>
+          <tr>
+            <td class="esq">Processo Administrativo de Falta</td>
+            <td class="dir"><%= @falta %></td>
+          </tr>
+          <tr>
+            <th class="esq">Total</th>
+            <th class="dir"><%= @vila_mariana+@vila_guilherme+@recorps+@outras_areas+@readaptados+@aposentados+@licenca_medica+@falta %></th>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<div class="row" style="margin-top: 50px">
   <div class="col-md-6 col-md-offset-3">
-    <h1 style="text-align: center; margin-bottom: 40px;">Relatório</h1>
     <div class="tabela">
       <table class="table table-condensed">
         <thead>
@@ -20,7 +71,7 @@
           </tr>
           <tr class="back">
             <th>Total de Cargos Preenchidos</th>
-            <th>222</th>
+            <th><%= @motoristas %></th>
           </tr>
           <tr>
             <th class="esq">Servidores em Processo Administrativo de Falta</th>
