--- a/app/views/listas/geral.html.erb
+++ b/app/views/listas/geral.html.erb
@@ -1,18 +1,20 @@
 <h1>Motoristas - Geral</h1>
-<h3>Motoristas - Vila Mariana</h3>
+<h3>Vila Mariana</h3>
 <%= render 'layouts/lista', object: @vila_mariana %>
-<h3>Motoristas - Vila Guilherme</h3>
+<h3>Vila Guilherme</h3>
 <%= render 'layouts/lista', object: @vila_guilherme %>
-<h3>Motoristas - RECORPS</h3>
+<h3>RECORPS</h3>
 <%= render 'layouts/lista', object: @recorps %>
-<h3>Motoristas - Outras Áreas</h3>
+<h3>Outras Áreas</h3>
 <%= render 'layouts/lista', object: @outras_areas %>
-<h3>Motoristas - Readaptados</h3>
+<h3>Readaptados</h3>
 <%= render 'layouts/lista', object: @readaptados %>
-<h3>Motoristas - Aposentados</h3>
-<%= render 'layouts/lista', object: @aposentados %>
-<h3>Motoristas - Licença Médica</h3>
+<h3>Licença Médica</h3>
 <%= render 'layouts/lista', object: @licenca_medica %>
-<h3>Motoristas - Processo Administrativo de Falta</h3>
+<h3>Processo Administrativo de Falta</h3>
 <%= render 'layouts/lista', object: @falta %>
+<h3>Aposentados</h3>
+<%= render 'layouts/lista', object: @aposentados %>
+<h3>Não Localizados</h3>
+<%= render 'layouts/lista', object: @nao_localizados %>
 
