--- a/app/views/pages/relatorio.html.erb
+++ b/app/views/pages/relatorio.html.erb
@@ -43,7 +43,7 @@
           </tr>
           <tr>
             <th class="esq">Total</th>
-            <th class="dir"><%= @vila_mariana+@vila_guilherme+@recorps+@outras_areas+@readaptados+@aposentados+@licenca_medica+@falta %></th>
+            <th class="dir"><%= @motoristas %></th>
           </tr>
         </tbody>
       </table>
