Combo box secoes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,14 @@ td, th {
   margin-bottom: 10px;
 }
 
+.form_label {
+  display: block;
+}
+
+.form_submit {
+  margin-top: 17px;
+}
+
 body { 
   padding-top: 70px;
 }
