--- a/app/views/listas/geral_idade.html.erb
+++ b/app/views/listas/geral_idade.html.erb
@@ -1,6 +1,5 @@
-<h1>Motoristas - Geral</h1>
-<%= link_to "Ordenar por Idade", geral_idade_path, class: "btn btn-default" %>
-<%= link_to "Ordenar por Tempo de Contribuição", geral_contribuicao_path, class: "btn btn-default" %>
+<h1>Motoristas - Geral - Ordenado por Idade</h1>
+<%= link_to "Voltar", geral_path, class: "btn btn-default" %>
 <h3>Vila Mariana</h3>
 <%= render 'layouts/lista', object: @vila_mariana %>
 <h3>Vila Guilherme</h3>
@@ -19,4 +18,3 @@
 <%= render 'layouts/lista', object: @aposentados %>
 <h3>Não Localizados</h3>
 <%= render 'layouts/lista', object: @nao_localizados %>
-
