--- a/app/views/pages/relatorio.html.erb
+++ b/app/views/pages/relatorio.html.erb
@@ -109,7 +109,13 @@
           </tr>
           <tr>
             <td class="esq">Servidores que reúnem condições para requerer aposentadoria</td>
-            <td class="dir">22</td>
+            <% cont = 0%>
+            <%  Motorista.all.each do |m| %>
+              <% if (age(m.data_de_nasc).to_i >= 65 || age(m.data_posse).to_i >= <35>  </35>) %>
+                <% cont = cont + 1 %>
+              <% end %>
+            <% end %>
+            <td class="dir"><%= cont %></td> 
           </tr>
           <tr>
             <th class="esq">Distribuição do efetivo em turnos</th>
