--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div class="container-fluid">
       <div class="col-md-4 col-md-offset-4">
         <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>"><%= message %></div>
+          <div class="alert alert-<%= message_type %>" style="text-align: center;"><%= message %></div>
         <% end %>
       </div>
       <%= yield %>
