--- a/app/views/motoristas/edit.html.erb
+++ b/app/views/motoristas/edit.html.erb
@@ -5,34 +5,34 @@
     
     <%= form_for(@motorista) do |f| %>
       <%= f.label :nome, "Nome", class: 'form_label' %>
-      <%= f.text_field :nome, class: 'form-control formulario' %>
+      <%= f.text_field :nome, class: 'form-control formulario', :placeholder => @motorista.errors.full_messages_for(:nome).to_sentence %>
       
       <%= f.label :rf, "RF", class: 'form_label' %>
-      <%= f.text_field :rf, maxlength: 7, class: 'form-control formulario' %>
+      <%= f.text_field :rf, maxlength: 7, class: 'form-control formulario', :placeholder => @motorista.errors.full_messages_for(:rf).to_sentence %>
       
       <%= f.label :data_de_nasc, "Data de Nascimento", class: 'form_label' %>
       <%= f.date_select(:data_de_nasc, {start_year: 1900, include_blank: true}, {class: 'form-control formulario', style: 'width: auto; display: inline;'}) %>
       
       <%= f.label :cargo, "Cargo", class: 'form_label' %>
-      <%= f.text_field :cargo, class: 'form-control formulario' %>
+      <%= f.text_field :cargo, class: 'form-control formulario', :placeholder => @motorista.errors.full_messages_for(:cargo).to_sentence %>
       
       <%= f.label :data_posse, "Data do Termo de Posse", class: 'form_label' %>
       <%= f.date_select(:data_posse, {start_year: 1900, include_blank: true}, {class: 'form-control formulario', style: 'width: auto; display: inline;'}) %>
       
       <%= f.label :secao_original, "Seção Original", class: 'form_label' %>
-      <%= f.select(:secao_original, @secoes, {include_blank: true}, {:class => 'form-control formulario'}) %>
+      <%= f.select(:secao_original, @secoes, {:prompt => @motorista.errors.full_messages_for(:secao_original).to_sentence}, {:class => 'form-control formulario'}) %>
       
       <%= f.label :secao_atual, "Seção Atual", class: 'form_label' %>
-      <%= f.select(:secao_atual, @secoes, {include_blank: true}, {:class => 'form-control formulario'}) %>
+      <%= f.select(:secao_atual, @secoes, {:prompt => @motorista.errors.full_messages_for(:secao_atual).to_sentence}, {:class => 'form-control formulario'}) %>
       
       <%= f.label :pontuacao, "Pontuação", class: 'form_label' %>
-      <%= f.text_field :pontuacao, class: 'form-control formulario' %>
+      <%= f.text_field :pontuacao, class: 'form-control formulario', :placeholder => @motorista.errors.full_messages_for(:pontuacao).to_sentence %>
       
       <%= f.label :local, "Local", class: 'form_label' %>
-      <%= f.select(:local, [["TRAF V. MARIAN."],["TRAF V. GUILH."],["Outras Áreas"],["RECORPS"],["Não Localizado"]], {include_blank: true}, {:class => 'form-control formulario'}) %>
+      <%= f.select(:local, [["TRAF V. MARIAN."],["TRAF V. GUILH."],["Outras Áreas"],["RECORPS"],["Não Localizado"]], {:prompt => @motorista.errors.full_messages_for(:local).to_sentence}, {:class => 'form-control formulario'}) %>
       
       <%= f.label :status, "Status", class: 'form_label' %>
-      <%= f.select(:status, [["Ativo"],["Licença Médica"],["Processo Administrativo de Falta"],["Aposentado"],["Readaptado"]], {include_blank: true}, {:class => 'form-control formulario'}) %>
+      <%= f.select(:status, [["Ativo"],["Licença Médica"],["Processo Administrativo de Falta"],["Aposentado"],["Readaptado"]], {:prompt => @motorista.errors.full_messages_for(:status).to_sentence}, {:class => 'form-control formulario'}) %>
       
       <%= f.submit "Registrar Motorista", class: "btn btn-primary btn-block form_submit" %>
     <% end %>
