--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,4 +14,49 @@
       <%= link_to "Aposentados",                      aposentados_path,    class: "btn btn-block btn-default"  %>
       <%= link_to "Não Localizados",                  nao_localizados_path,    class: "btn btn-block btn-default"  %>
   </div>
-</div>
+<!--</div>-->
+
+<!--<style>-->
+<!--  .bla{-->
+<!--    background-color: blue;-->
+<!--  }-->
+<!--</style>-->
+
+<!--<div class="row">-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="bla">bla</div>-->
+<!--  </div>-->
+<!--</div>-->
