--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,12 @@
     
     <%= render 'layouts/header' %>
     <div class="container-fluid">
-      <div class="col-md-4 col-md-offset-4">
-        <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>" style="text-align: center;"><%= message %></div>
-        <% end %>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+          <% flash.each do |message_type, message| %>
+            <div class="alert alert-<%= message_type %>" style="text-align: center;"><%= message %></div>
+          <% end %>
+        </div>
       </div>
       <%= yield %>
     </div>
