--- a/app/views/layouts/_lista.html.erb
+++ b/app/views/layouts/_lista.html.erb
@@ -9,7 +9,7 @@
         <th>Nome</th>
         <th>RF</th>
         <th>Cargo</th>
-        <th>Seção Original</th>
+        <th>Chapeira</th>
         <th>Seção Atual</th>
         <th>Pontuação</th>
         <% if object.class == Motorista::ActiveRecord_Relation %>
