--- a/app/views/listas/geral_idade.html.erb
+++ b/app/views/listas/geral_idade.html.erb
@@ -16,5 +16,5 @@
 <%= render 'layouts/lista', object: @falta %>
 <h3>Aposentados</h3>
 <%= render 'layouts/lista', object: @aposentados %>
-<h3>Não Localizados</h3>
-<%= render 'layouts/lista', object: @nao_localizados %>
+<h3>Chapeiras Diversas</h3>
+<%= render 'layouts/lista', object: @chapeiras_diversas %>
