--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,8 +12,7 @@
       <%= link_to "Outras Áreas",                     outras_areas_path,       class: "btn btn-block btn-default"  %>
       <%= link_to "Readaptados",                      readaptados_path,        class: "btn btn-block btn-default"  %>
       <%= link_to "Aposentados",                      aposentados_path,        class: "btn btn-block btn-default"  %>
-      <%= link_to "Não Localizados",                  nao_localizados_path,    class: "btn btn-block btn-default"  %>
-      <%= link_to "Chapeira",                         chapeira_path,           class: "btn btn-block btn-default"  %>
+      <%= link_to "Chapeiras Diversas",               chapeiras_diversas_path, class: "btn btn-block btn-default"  %>
     </div>
   </div>
 </div>
