--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,6 +29,10 @@ body {
   background-color: #E0E0E0;
 }
 
+body {
+  background-color: #265a88;
+}
+
 .dir {
   text-align: right;
 }
@@ -37,4 +41,8 @@ body {
   .form-control {
     border: solid red 1px;
   }
+}
+
+.btn-size {
+  height: 170px;
 }
