--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top navbar-default" style="line-height: 50px; padding: 0px 25px 0px 0px">
+<nav class="navbar navbar-fixed-top navbar-inverse" style="line-height: 50px; padding: 0px 25px 0px 0px">
   <div class="container-fluid">
     <% if logged_in? %>
       <ul class="nav navbar-nav navbar-left">
