--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,27 @@
+<!--<div class="row">-->
+<!--  <div class="col-md-4 col-md-offset-4" style="text-align: center;">-->
+<!--    <h1 style="color: white;">Motoristas</h1>-->
+<!--    <div class="col-md-8 col-md-offset-2" style="margin-top: 10px; margin-bottom: 20px;">-->
+<!--      <%= link_to "Relatório",                        relatorio_path,          class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "Geral",                            geral_path,              class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "Vila Guilherme",                   vila_guilherme_path,     class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "Vila Mariana",                     vila_mariana_path,       class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "Licença Médica",                   licenca_medica_path,     class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "Processo Administrativo de Falta", falta_path,              class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "RECORPS",                          recorps_path,            class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "Outras Áreas",                     outras_areas_path,       class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "Readaptados",                      readaptados_path,        class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "Aposentados",                      aposentados_path,        class: "btn btn-block btn-primary"  %>-->
+<!--      <%= link_to "Chapeiras Diversas",               chapeiras_diversas_path, class: "btn btn-block btn-primary"  %>-->
+<!--  </div>-->
+<!--</div>-->
+
 <div class="row">
-  <div class="col-md-4 col-md-offset-4" style="text-align: center;">
-    <h1>Motoristas</h1>
-    <div class="col-md-8 col-md-offset-2" style="margin-top: 10px; margin-bottom: 20px;">
-      <%= link_to "Relatório",                        relatorio_path,          class: "btn btn-block btn-default"  %>
-      <%= link_to "Geral",                            geral_path,              class: "btn btn-block btn-default"  %>
-      <%= link_to "Vila Guilherme",                   vila_guilherme_path,     class: "btn btn-block btn-default"  %>
-      <%= link_to "Vila Mariana",                     vila_mariana_path,       class: "btn btn-block btn-default"  %>
-      <%= link_to "Licença Médica",                   licenca_medica_path,     class: "btn btn-block btn-default"  %>
-      <%= link_to "Processo Administrativo de Falta", falta_path,              class: "btn btn-block btn-default"  %>
-      <%= link_to "RECORPS",                          recorps_path,            class: "btn btn-block btn-default"  %>
-      <%= link_to "Outras Áreas",                     outras_areas_path,       class: "btn btn-block btn-default"  %>
-      <%= link_to "Readaptados",                      readaptados_path,        class: "btn btn-block btn-default"  %>
-      <%= link_to "Aposentados",                      aposentados_path,        class: "btn btn-block btn-default"  %>
-      <%= link_to "Chapeiras Diversas",               chapeiras_diversas_path, class: "btn btn-block btn-default"  %>
-    </div>
+  <div class="col-md-4 col-md-offset-2" style="display: table-cell; vertical-align: middle;">
+    <%= link_to "Gerar Relatório", relatorio_path, class: "btn btn-block btn-primary btn-size" %>
+  </div>
+  <div class="col-md-4" style="display: table-cell; vertical-align: middle;">
+    <%= link_to "Resto", relatorio_path, class: "btn btn-block btn-primary btn-size" %>
   </div>
 </div>
 
