--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,11 +16,11 @@
 <!--  </div>-->
 <!--</div>-->
 
-<div class="row">
-  <div class="col-md-4 col-md-offset-2" style="display: table-cell; vertical-align: middle;">
+<div class="row" margin="margin-top: 20%;">
+  <div class="col-md-4 col-md-offset-2">
     <%= link_to "Gerar Relatório", relatorio_path, class: "btn btn-block btn-primary btn-size" %>
   </div>
-  <div class="col-md-4" style="display: table-cell; vertical-align: middle;">
+  <div class="col-md-4">
     <%= link_to "Resto", relatorio_path, class: "btn btn-block btn-primary btn-size" %>
   </div>
 </div>
