--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
           <% end %>
         </div>
       </div>
+    </div>
+    <div class="container" style="margin-top: 10%;">
       <%= yield %>
     </div>
 
