--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,4 +45,14 @@ body {
 
 .btn-size {
   height: 170px;
+  line-height: 170px;
+  font-size: 30px;
+  font-weight: bold;
+  border: 1px solid black;
+  padding: 0;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  &:hover{
+    border: 1px solid black;
+    padding: 0;
+  }
 }
