--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
 <!--  </div>-->
 <!--</div>-->
 
-<div class="row" margin="margin-top: 20%;">
+<div class="row">
   <div class="col-md-4 col-md-offset-2">
     <%= link_to "Gerar Relatório", relatorio_path, class: "btn btn-block btn-primary btn-size" %>
   </div>
